--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,15 +2,17 @@
   "manifest_version": 2,
   "name": "Unicode",
   "description": "Access all Unicode characters to copy/paste them wherever you feel like.",
-  "version": "0.6",
+  "version": "0.7",
 
   "icons": {
     "128": "128.png"
   },
   "permissions": ["clipboardWrite", "notifications", "storage"],
-  "app": {
-    "background": {
-      "scripts": ["background.js"]
+  "browser_action": {
+    "default_title": "Unicode",
+    "default_popup": "index.html",
+    "default_icon": {
+      "128": "128.png"
     }
   }
 }
